# Diraudio

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_state.dart  main.dart
lib/ui/elements/: ui_elements.dart
lib/ui/file_transcoding/: file_transcoding.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
messages/: basic.proto  dart_signal.proto  mp3.proto  rust_signal.proto
native/hub/: Cargo.toml
native/hub/src/: conversion_handler.rs  lib.rs  progress_report_buffer.rs
native/hub/src/encoder_decoder/: mod.rs  raw_audio_data.rs
native/hub/src/encoder_decoder/encoders/: mod.rs
native/hub/src/encoder_decoder/encoders/mp3/: mod.rs
native/hub/src/encoder_decoder/encoders/mp3/mp3lame-encoder-master/: Cargo.toml
native/hub/src/encoder_decoder/encoders/mp3/mp3lame-encoder-master/mp3lame-sys-master/lame-3.100/include/: lame.h
native/hub/src/encoder_decoder/encoders/mp3/mp3lame-encoder-master/mp3lame-sys-master/lame-3.100/libmp3lame/: bitstream.c  util.h
native/hub/src/encoder_decoder/encoders/mp3/mp3lame-encoder-master/mp3lame-sys-master/src/: lib.rs
native/hub/src/encoder_decoder/encoders/mp3/mp3lame-encoder-master/src/: lib.rs
native/hub/src/encoder_decoder/encoders/mp3_encoder/: mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+14 files in other folders)
